spacing bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -366,9 +366,9 @@ html {
         .projects__card-one--image, .projects__card--image {
           height: 48%; } }
     .projects__card-one--header, .projects__card--header {
-      font-size: 2rem;
+      font-size: 2rem !important;
       color: #000000;
-      margin-top: 2rem;
+      margin-top: 2rem !important;
       transition: color .75s; }
       .projects__card-one--header.dark, .projects__card--header.dark {
         color: #f5f5f5; }
@@ -377,9 +377,9 @@ html {
           font-size: 2.5rem;
           margin-top: 2.5rem; } }
     .projects__card-one--text, .projects__card--text {
-      font-size: 1.5rem;
+      font-size: 1.5rem !important;
       color: #373b44;
-      margin-top: 1rem;
+      margin-top: 1rem !important;
       transition: color .75s; }
       .projects__card-one--text.dark, .projects__card--text.dark {
         color: #f5f5f5; }
@@ -525,23 +525,23 @@ html {
   letter-spacing: .25rem;
   color: #f5f5f5; }
 
-.header {
+.header-main {
   width: 100%;
   padding-bottom: 1rem;
   text-align: left;
   font-size: 3.5rem;
   color: #000000;
   transition: color .75s; }
-  .header.dark {
+  .header-main.dark {
     color: #f5f5f5; }
 
-.text {
+.text-main {
   color: #373b44;
   font-size: 2rem;
   transition: color .75s; }
-  .text.dark {
+  .text-main.dark {
     color: #f5f5f5; }
-  .text:not(:last-child) {
+  .text-main:not(:last-child) {
     padding-bottom: 1.5rem; }
 
 .container-heading {
